# ksj-mcp

./: .gitignore  README.md  pyproject.toml
src/ksj_mcp/: __init__.py  connections.py  database.py  ocr.py  server.py  templates.py
tests/: conftest.py  test_aiex.py  test_connections.py  test_database.py  test_server_manual_capture.py  test_templates.py
